--- a/challenge2.css
+++ b/challenge2.css
@@ -1,2 +1,44 @@
 /* CSS declarations go here */
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding-top: 53px;
+  padding-bottom: 64px;
+}
 
+aside {
+	height: auto;
+  	background-color: #4d394b;
+
+}
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 53px;
+  width: 100%;
+}
+
+/*.message-content {
+  position: relative;
+  margin-top: .5rem;
+  padding: .25rem 2rem .1rem 3rem;
+  min-height: 10px;
+}*/
+
+.message-header { /* time et nom user */
+	color: #bc14ab; 
+}
+
+textarea {
+	background-color: white;
+}
+
+form {
+	background-color: #4d394b;
+}
+
+ul {
+	background-color: #e1e1e1;
+}
