--- a/challenge2.css
+++ b/challenge2.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding-top: 53px;
   padding-bottom: 64px;
-  background-image: url(/geometric-cover2.jpg);
+  background-image: url(img/geometric-cover2.jpg);
   background-attachment: fixed;
 }
 
@@ -15,11 +15,15 @@ aside {
 
 }
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
+  background-color: white;
+  top: 10px;
+  margin-bottom: 10px;
+  margin-left: 40px;
   height: 53px;
-  width: 100%;
+  width: 81%;
+  font-size: 3em;
+  color: #bc14ab;
+  padding: 1%;
 }
 
 /*.message-content {
@@ -35,14 +39,24 @@ aside {
 
 textarea {
 	background-color: white;
+	color: gray;
+	font-weight: 200;
+
 }
+
 
 form {
 	background-color: #4d394b;
 }
 
 ul {
+	width: 80%;
 	background-color: #e1e1e1;
 	margin-left: 40px;
 	margin-right: 50px;
+	margin-top: 15px;
+}
+
+input {
+
 }
