--- a/challenge2.css
+++ b/challenge2.css
@@ -18,7 +18,9 @@ aside {
   background-color: white;
   top: 10px;
   margin-bottom: 10px;
-  margin-left: 40px;
+  /*margin-left: 40px;*/
+  margin-right: auto;
+  margin-left: auto;
   height: 53px;
   width: 81%;
   font-size: 3em;
@@ -37,6 +39,11 @@ aside {
 	color: #bc14ab; 
 }
 
+.time {
+	color: #fe840d;
+}
+
+
 textarea {
 	background-color: white;
 	color: gray;
@@ -52,11 +59,19 @@ form {
 ul {
 	width: 80%;
 	background-color: #e1e1e1;
-	margin-left: 40px;
-	margin-right: 50px;
+	/*margin-left: 70px;*/
+	margin-right: auto;
+	margin-left: auto;
 	margin-top: 15px;
 }
 
 input {
 
 }
+
+@media screen and (max-width: 599px) {
+  .header {
+    display:none;
+  }
+}
+
